apps/diveapp/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diveapp-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diveapp-db
  template:
    metadata:
      labels:
        app: diveapp-db
    spec:
      securityContext:
        fsGroup: 70
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "diveapp_user", "-d", "diveapp"]
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: diveapp-db-data
