apps/diveapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diveapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diveapp
  template:
    metadata:
      labels:
        app: diveapp
    spec:
      containers:
        - name: diveapp
          image: ghcr.io/flipez/dive:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
