apps/diveapp/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: diveapp-db
  namespace: default
spec:
  selector:
    app: diveapp-db
  ports:
    - port: 5432
      targetPort: 5432
