apps/diveapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diveapp
  namespace: default
spec:
  selector:
    app: diveapp
  ports:
    - port: 8080
      targetPort: 8080
