apps/diveapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diveapp
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: dive.shmbrt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diveapp
                port:
                  number: 8080
  tls:
    - hosts:
        - dive.shmbrt.de
      secretName: diveapp-tls
